--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -3,16 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="" />
+    <meta name="author" content="" />
     <title>RND Datahub</title>
     {% load static %}
+    <!-- CSS-Import -->
     <link rel="stylesheet" href="{% static 'core/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'core/css/theme_style.css' %}">
     <link rel="stylesheet" href="{% static 'core/css/style.css' %}">
-    
-
+    <!-- Favicon-Import -->
+    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon_rnd.ico' %}" />
 
 </head>
+
+<!-- <body class="d-flex flex-column h-100"> -->
 <body>
-    <h1>RND Datahub</h1>
+    <div class="container">
+
+       {% block content %}
+
+       {% endblock %}
+        
+
+    </div>
+
+     
     
+
+<!-- Javascript -->
+<script src="{% static 'core/js/bootstrap.bundle.min.js' %}"></script>
+<script src="{% static 'core/js/theme_script.js' %}"></script>
+<script src="{% static 'core/js/script.js' %}"></script>
+
 </body>
 </html>
