--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -1,20 +1,26 @@
-{% extend "core/base.html" %}
 
-{% block navbar %}
+{% load static %}
 <nav class="navbar navbar-expand-lg navbar-light bg-white py-3 border-bottom border-success sticky-top">
     <div class="container px-5">
-        <a class="navbar-brand" href="index.html"><span class="fw-bolder sz-color ">Sächsische Zeitung | KI-Hub</span></a>
+        <a class="navbar-brand" href="index.html"><span class="fw-bolder sz-color ">RND-Datenteam | KI-Hub</span></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                 <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'redaktion' %}">Redaktion</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'redaktion' %}">Vertrieb</a></li>
-                <li class="nav-item"><a class="nav-link" href="{% url 'redaktion' %}">Bilder</a></li>
+                <li class="nav-item"><a class="nav-link" href="{% url 'chat' %}">Chat</a></li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" onclick="toggleSidebar()">
+                        <img src="{% static 'core/images/person-fill.svg' %}" alt="Logo" width="20" height="20">
+                    </a>
+                </li>
+                <!-- <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Bilder</a></li> -->
             </ul>
         </div>
     </div>
 </nav>
-{% endblock %}
+
+<!-- Sidebar für Account-Übersicht -->
+{% include "accounts/sidebar.html" %}
+
 
 
