--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="{% static 'core/css/core_style.css' %}">
     <!-- Favicon-Import -->
     <link rel="icon" type="image/x-icon" href="{% static 'images/rnd_logo.png' %}" />
+    <!-- Fonts-Import -->
+    <link rel="stylesheet" href="{% static 'core/css/fonts.css' %}">
 
 </head>
 
