--- a/core/static/core/css/core_style.css
+++ b/core/static/core/css/core_style.css
@@ -1,3 +1,14 @@
+@charset "UTF-8";
+body {
+  font-family: "Plus Jakarta Sans", sans-serif;
+}
+
+/* Für kursiven Text */
+em, i {
+  font-family: "Plus Jakarta Sans", sans-serif;
+  font-style: italic;
+}
+
 /* Message Container Styles */
 .message-container {
   transition: opacity 0.5s ease-out;
